--- a/uasyncio/synchronisation.ipynb
+++ b/uasyncio/synchronisation.ipynb
@@ -6,16 +6,11 @@
    "source": [
     "# Synchronisation\n",
     "\n",
-    "Basically synchronization is needed so that there isn't a race between the coros. And for that we have the following, however it is important to have in mind that not most of the following work as intended, some aren't totally complete yet."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Basically synchronization is needed so that there isn't a race between the coros, although this is supposed to be asynchronous programming, it could still need some order when excecuting. And for that we have the following, however it is important to have in mind that not most of the following work as intended, some aren't totally complete yet.\n",
+    "\n",
     "## Lock\n",
     "\n",
-    "A lock basically lets you put other functions in a wait state before it is released, meaning they are acquired by a function, and the other ones that wait for it, can't continue before it is released, this way all the functions can run one after another without problems. Of course they don't necesarily run in a desired order.\n",
+    "A lock basically lets you put other functions in a wait state before it is released, meaning they are acquired by a function, and the other ones that wait for it, can't continue before it is released, this way all the functions can run one after another without problems. The order in which they run one after the other depends on the order they are defined.\n",
     "\n",
     "Here we will show some examples, first we must connect with the board."
    ]
@@ -29,9 +24,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[34mConnecting to --port=/dev/ttyUSB0 --baud=115200 \u001b[0mcould not open port /dev/ttyUSB0: [Errno 2] No such file or directory: '/dev/ttyUSB0'\n",
-      "\u001b[34m\n",
-      "Are you sure your ESP-device is plugged in?\u001b[0m"
+      "\u001b[34mConnecting to --port=/dev/ttyUSB0 --baud=115200 \u001b[0m\n",
+      "\u001b[34mReady.\n",
+      "\u001b[0m"
      ]
     }
    ],
@@ -43,24 +38,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then first, uasyncio and Lock must be imported, as well as our function which will let us show how lock works and a killer function which defines a time in specific in which the processes will run."
+    "Then first, `uasyncio` and `Lock` must be imported, as well as our function which will let us show how lock works and a killer function which defines a time in specific in which the processes will run."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "async def task(i, lock):\n",
+    "import uasyncio as asyncio\n",
+    "from uasyncio.synchro import Lock\n",
+    "\n",
+    "async def task(i,sleep, lock):\n",
     "    while 1:\n",
+    "        print('Waiting lock in task ',i)\n",
     "        await lock.acquire()\n",
-    "        print(\"Acquired lock in task\", i)\n",
-    "        await asyncio.sleep(0.5)\n",
+    "        print(\"Acquired lock in task \",i)\n",
+    "        await asyncio.sleep(sleep)\n",
+    "        print('Realeasing lock in task ',i)\n",
     "        lock.release()\n",
     "\n",
-    "async def killer():\n",
-    "    await asyncio.sleep(10)"
+    "# killer function lets us run the asyncio example fot about 10 seconds, we pass loop so that we can stop it.\n",
+    "async def killer(loop):\n",
+    "    await asyncio.sleep(10)\n",
+    "    loop.stop()\n",
+    "    loop.close()"
    ]
   },
   {
@@ -72,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,34 +83,85 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "And last, we add the desired tasks an run it."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting lock in task  1\n",
+      "Waiting lock in task  2\n",
+      "Waiting lock in task  3\n",
+      "Acquired lock in task  1\n",
+      "Realeasing lock in task  1\n",
+      "Waiting lock in task  1\n",
+      "Acquired lock in task  2\n",
+      "Realeasing lock in task  2\n",
+      "Waiting lock in task  2\n",
+      "Acquired lock in task  3\n",
+      "Realeasing lock in task  3\n",
+      "Waiting lock in task  3\n",
+      "Acquired lock in task  1\n",
+      "Realeasing lock in task  1\n",
+      "Waiting lock in task  1\n",
+      "Acquired lock in task  2\n",
+      "Realeasing lock in task  2\n",
+      "Waiting lock in task  2\n",
+      "Acquired lock in task  3\n",
+      "Realeasing lock in task  3\n",
+      "Waiting lock in task  3\n",
+      "Acquired lock in task  1\n",
+      "Realeasing lock in task  1\n",
+      "Waiting lock in task  1\n",
+      "Acquired lock in task  2\n",
+      "Realeasing lock in task  2\n",
+      "Waiting lock in task  2\n",
+      "Acquired lock in task  3\n",
+      "Realeasing lock in task  3\n",
+      "Waiting lock in task  3\n",
+      "Acquired lock in task  1\n",
+      "Realeasing lock in task  1\n",
+      "Waiting lock in task  1\n",
+      "Acquired lock in task  2\n"
+     ]
+    }
+   ],
    "source": [
+    "loop=asyncio.get_event_loop()\n",
+    "loop.create_task(task(1, 0.5, lock))\n",
+    "loop.create_task(task(2, 1, lock))\n",
+    "loop.create_task(task(3, 1.5, lock))\n",
     "\n",
-    "loop.create_task(task(1, lock))\n",
-    "loop.create_task(task(2, lock))\n",
-    "loop.create_task(task(3, lock))\n",
-    "\n",
-    "loop.run_until_complete(killer()) "
+    "loop.run_until_complete(killer(loop)) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "repl is in normal command mode\n",
+      "[\\r\\x03\\x03] b'\\r\\nMicroPython v1.12 on 2019-12-20; ESP32 module with ESP32\\r\\nType \"help()\" for more information.\\r\\n>>> \\r\\n>>> \\r\\nMPY: soft reboot\\r\\nMicroPython v1.12 on 2019-12-20; ESP32 module with ESP32\\r\\nType \"help()\" for more information.\\r\\n>>> \\r\\n>>> \\r\\n>>> '\n",
+      "[\\r\\x01] b'\\r\\n>>> \\r\\nraw REPL; CTRL-B to exit\\r\\n>'"
+     ]
+    }
+   ],
+   "source": [
+    "%rebootdevice"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -115,33 +169,136 @@
    "source": [
     "## Event\n",
     "\n",
-    "The event class is kinda like `Lock` one, the difference is that `Lock` puts all coros in some sort of order in which just one of them is run after the other, however event lets us stops on or more at the same time, and then let them continue at the same time. In order to use event, we should then import `asyn`."
+    "The event class is kinda like `Lock` one, the difference is that `Lock` puts all coros in some sort of order in which just one of them is run after the other, however event lets us stops one or more at the same time, and then let them continue at the same time. In order to use event, we should then import `asyn`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "."
+     ]
+    }
+   ],
    "source": [
     "import asyn\n",
+    "import uasyncio as asyncio\n",
     "event = asyn.Event()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then it is needed to define the coroutines which will be run, `task` is the one that runs depending on the `Event()`, whether if it is set or clear. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "async def eventwait(event):\n",
-    "    print('waiting for event')\n",
-    "    await event\n",
-    "    print('got event')\n",
-    "    event.clear()\n",
+    "\n",
+    "async def task(i, event):\n",
+    "    while 1:\n",
+    "        await event\n",
+    "        if not event.is_set():\n",
+    "            print('waiting for event in task ',i)\n",
+    "        else:\n",
+    "            print('now running in task ',i)\n",
+    "        await asyncio.sleep(1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Afterwards we define `eventset`, which sets and clears the event in periods so that `task` can run."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def eventset(event):\n",
+    "    while 1:\n",
+    "        event.clear()\n",
+    "        print('event cleared')\n",
+    "        await asyncio.sleep(2)\n",
+    "        event.set()\n",
+    "        print('event set for a little')\n",
+    "        await asyncio.sleep(4)\n",
+    "        \n",
+    "\n",
+    "async def killer(loop):\n",
+    "    await asyncio.sleep(10)\n",
+    "    loop.stop()\n",
+    "    loop.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "event cleared\n",
+      "event set for a little\n",
+      "now running in task  1\n",
+      "now running in task  2\n",
+      "now running in task  1\n",
+      "now running in task  2\n",
+      "now running in task  1\n",
+      "now running in task  2\n",
+      "now running in task  1\n",
+      "now running in task  2\n",
+      "event cleared\n",
+      ".event set for a little\n",
+      "now running in task  1\n",
+      "now running in task  2\n",
+      "now running in task  1\n",
+      "now running in task  2\n"
+     ]
+    }
+   ],
+   "source": [
     "loop = asyncio.get_event_loop()\n",
     "loop.create_task(eventset(event))\n",
-    "await eventwait(event)"
+    "loop.create_task(task(1,event))\n",
+    "loop.create_task(task(2,event))\n",
+    "loop.create_task(killer(loop))\n",
+    "loop.run_forever()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "repl is in normal command mode\n",
+      "[\\r\\x03\\x03] b'\\r\\nMicroPython v1.12 on 2019-12-20; ESP32 module with ESP32\\r\\nType \"help()\" for more information.\\r\\n>>> \\r\\n>>> \\r\\nMPY: soft reboot\\r\\nMicroPython v1.12 on 2019-12-20; ESP32 module with ESP32\\r\\nType \"help()\" for more information.\\r\\n>>> \\r\\n>>> \\r\\n>>> '\n",
+      "[\\r\\x01] b'\\r\\n>>> \\r\\nraw REPL; CTRL-B to exit\\r\\n>'"
+     ]
+    }
+   ],
+   "source": [
+    "%rebootdevice"
    ]
   },
   {
@@ -155,32 +312,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[31mNo serial connected\n",
-      "\u001b[0m  %serialconnect to connect\n",
-      "  %esptool to flash the device\n",
-      "  %lsmagic to list commands"
+      "0 0 0 Synch\n",
+      "1 1 1 Synch\n",
+      "2 2 2 Synch\n",
+      "3 3 3 Synch\n",
+      ".4 4 4 Synch\n",
+      ".."
      ]
     }
    ],
    "source": [
     "import asyn\n",
+    "import uasyncio as asyncio\n",
     "\n",
+    "#callback is defined\n",
     "def callback(text):\n",
     "    print(text)\n",
-    "\n",
+    "    \n",
+    "#the first parameter corresponds to the amount of coros that will use the barrier\n",
     "barrier = asyn.Barrier(3, callback, ('Synch',))\n",
     "\n",
-    "async def report():\n",
+    "async def report(duration, barrier):\n",
     "    for i in range(5):\n",
+    "        await asyncio.sleep(duration)\n",
     "        print('{} '.format(i), end='')\n",
-    "        await barrier"
+    "        await barrier\n",
+    "\n",
+    "async def killer():\n",
+    "    await asyncio.sleep(18)\n",
+    "        \n",
+    "loop = asyncio.get_event_loop()\n",
+    "loop.create_task(report(0.5, barrier))\n",
+    "loop.create_task(report(1, barrier))\n",
+    "loop.create_task(report(1.5, barrier))\n",
+    "loop.run_until_complete(killer())\n",
+    "loop.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "repl is in normal command mode\n",
+      "[\\r\\x03\\x03] b'\\r\\nMicroPython v1.12 on 2019-12-20; ESP32 module with ESP32\\r\\nType \"help()\" for more information.\\r\\n>>> \\r\\n>>> \\r\\nMPY: soft reboot\\r\\nMicroPython v1.12 on 2019-12-20; ESP32 module with ESP32\\r\\nType \"help()\" for more information.\\r\\n>>> \\r\\n>>> \\r\\n>>> '\n",
+      "[\\r\\x01] b'\\r\\n>>> \\r\\nraw REPL; CTRL-B to exit\\r\\n>'"
+     ]
+    }
+   ],
+   "source": [
+    "%rebootdevice"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you can see, with barrier, no other functions continues running until every of them is awaiting for the callback and don't continue until it is run."
    ]
   },
   {
@@ -189,34 +388,105 @@
    "source": [
     "## Semaphore\n",
     "\n",
-    "Semaphore, different from `Locks`, lets us put in queue coros, and in some way just a defined amount of them can keep running, just when the object semaphore is released. Lets run an example to understand it more."
+    "Semaphore, different from `Locks`, lets us put in queue coros, and in some way just a defined amount of them can keep running, just when the object semaphore is released. Lets run an example to understand it more.\n",
+    "\n",
+    "First we must do the imports."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import asyncio\n",
-    "import time\n",
-    "\n",
-    "async def myWorker(semaphore):\n",
-    "    await semaphore.acquire()\n",
-    "    print(\"Successfully acquired the semaphore\")\n",
-    "    await asyncio.sleep(3)\n",
-    "    print(\"Releasing Semaphore\")\n",
-    "    semaphore.release()\n",
-    "\n",
-    "async def main(loop):\n",
-    "    mySemaphore = asyncio.Semaphore(value=2)\n",
-    "    await asyncio.wait([myWorker(mySemaphore), myWorker(mySemaphore), myWorker(mySemaphore)])\n",
-    "    print(\"Main Coroutine\")\n",
-    "\n",
+    "import uasyncio as asyncio\n",
+    "import asyn\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our functions are defined in order to see how semaphore works."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def myWorker(i, duration, semaphore):\n",
+    "    while 1:\n",
+    "        await semaphore.acquire()\n",
+    "        print(\"Successfully acquired the semaphore\", i)\n",
+    "        await asyncio.sleep(3)\n",
+    "        print(\"Releasing Semaphore\", i)\n",
+    "        semaphore.release()\n",
+    "        await asyncio.sleep(duration)\n",
+    "    \n",
+    "async def killer(duration, loop):\n",
+    "        await asyncio.sleep(duration)\n",
+    "        loop.stop()\n",
+    "        loop.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully acquired the semaphore 1\n",
+      "Successfully acquired the semaphore 2\n",
+      "Releasing Semaphore 1\n",
+      "Successfully acquired the semaphore 3\n",
+      "Releasing Semaphore 2\n",
+      ".Successfully acquired the semaphore 1\n",
+      "Releasing Semaphore 3\n",
+      "Successfully acquired the semaphore 2\n",
+      "Releasing Semaphore 1\n",
+      "Successfully acquired the semaphore 3\n",
+      "Releasing Semaphore 2\n",
+      "Successfully acquired the semaphore 1\n",
+      "Releasing Semaphore 3\n",
+      ".Successfully acquired the semaphore 3\n",
+      "Releasing Semaphore 1\n",
+      "Successfully acquired the semaphore 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "sema=asyn.Semaphore(2)\n",
     "loop = asyncio.get_event_loop()\n",
-    "loop.run_until_complete(main(loop))\n",
-    "print(\"All Workers Completed\")\n",
-    "loop.close()"
+    "loop.create_task(myWorker(1,2,sema))\n",
+    "loop.create_task(myWorker(2,3,sema))\n",
+    "loop.create_task(myWorker(3,1,sema))\n",
+    "loop.create_task(killer(15,loop))\n",
+    "loop.run_forever()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "repl is in normal command mode\n",
+      "[\\r\\x03\\x03] b'\\r\\nMicroPython v1.12 on 2019-12-20; ESP32 module with ESP32\\r\\nType \"help()\" for more information.\\r\\n>>> \\r\\n>>> \\r\\nMPY: soft reboot\\r\\nMicroPython v1.12 on 2019-12-20; ESP32 module with ESP32\\r\\nType \"help()\" for more information.\\r\\n>>> \\r\\n>>> \\r\\n>>> '\n",
+      "[\\r\\x01] b'\\r\\n>>> \\r\\nraw REPL; CTRL-B to exit\\r\\n>'"
+     ]
+    }
+   ],
+   "source": [
+    "%rebootdevice"
    ]
   },
   {
