--- a/uasyncio/synchronisation.ipynb
+++ b/uasyncio/synchronisation.ipynb
@@ -50,6 +50,7 @@
     "import uasyncio as asyncio\n",
     "from uasyncio.synchro import Lock\n",
     "\n",
+    "#async function defined to get the lock and after some time to release it\n",
     "async def task(i,sleep, lock):\n",
     "    while 1:\n",
     "        print('Waiting lock in task ',i)\n",
@@ -395,13 +396,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import uasyncio as asyncio\n",
-    "import asyn\n",
-    "import time"
+    "import asyn"
    ]
   },
   {
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -446,16 +446,16 @@
       "Releasing Semaphore 1\n",
       "Successfully acquired the semaphore 3\n",
       "Releasing Semaphore 2\n",
-      ".Successfully acquired the semaphore 1\n",
-      "Releasing Semaphore 3\n",
+      "Successfully acquired the semaphore 1\n",
+      ".Releasing Semaphore 3\n",
       "Successfully acquired the semaphore 2\n",
       "Releasing Semaphore 1\n",
       "Successfully acquired the semaphore 3\n",
       "Releasing Semaphore 2\n",
       "Successfully acquired the semaphore 1\n",
       "Releasing Semaphore 3\n",
-      ".Successfully acquired the semaphore 3\n",
-      "Releasing Semaphore 1\n",
+      "Successfully acquired the semaphore 3\n",
+      ".Releasing Semaphore 1\n",
       "Successfully acquired the semaphore 2\n"
      ]
     }
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -495,20 +495,41 @@
    "source": [
     "## Queue\n",
     "\n",
-    "At last we have `Queue`, which lets us to pass values between coros. If the object Queue doesn't have anything inside, what is returned is None."
+    "At last we have `Queue`, which lets us to pass values between coros. If the object Queue doesn't have anything inside, what is returned is None. First we must import needed modules and define our object Queue."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import uasyncio as asyncio\n",
     "from uasyncio.queues import Queue\n",
-    "q = Queue()\n",
+    "import urandom\n",
+    "q = Queue()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we must define our functions that will use Queue and the killer function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def slow_process():\n",
+    "    return urandom.randint(1,20)\n",
+    "\n",
     "async def producer(q):\n",
     "    while True:\n",
     "        result = await slow_process()  # somehow get some data\n",
+    "        await asyncio.sleep(2)\n",
     "        await q.put(result) \n",
     "        \n",
     "\n",
@@ -517,6 +538,56 @@
     "        result = await(q.get())  # Will pause if q is empty\n",
     "        print('Result was {}'.format(result))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def killer(duration, loop):\n",
+    "        await asyncio.sleep(duration)\n",
+    "        loop.stop()\n",
+    "        loop.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result was 7\n",
+      ".Result was 9\n",
+      "Result was 4\n",
+      ".Result was 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "loop=asyncio.get_event_loop()\n",
+    "loop.create_task(producer(q))\n",
+    "loop.create_task(consumer(q))\n",
+    "loop.create_task(killer(10,loop))\n",
+    "loop.run_forever()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you can see, when one result it put in queue, then the other can use it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
