--- a/flash_upy.ipynb
+++ b/flash_upy.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Flashing MicroPython in esp32 \n",
+    "# Flashing MicroPython in ESP32\n",
     "\n",
     "In order to get MicroPython in esp32 it is needed to have python installed and a package called esptool, which can be installed by using the following command: `sudo pip3 install esptool`. \n",
     "\n",
@@ -85,9 +85,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If everything returned is the same as this notebook, then you are all set and ready to program with uPy! If what you have is a esp8266, you should use one of the following commands:\n",
-    "- `esptool.py --port /dev/ttyUSB0 --baud 460800 write_flash --flash_size=detect 0 esp8266-20170108-v1.8.7.bin`\n",
-    "- `esptool.py --port /dev/ttyUSB0 --baud 460800 write_flash --flash_size=detect -fm dio 0 esp8266-20170108-v1.8.7.bin`"
+    "If everything returned is the same as this notebook, then you are all set and ready to program with uPy!\n",
+    "\n",
+    "# Flashing MicroPython in ESP8266\n",
+    "\n",
+    "If what you want to use is the ESP8266, it is almost the same as de ESP32, there are some little differences:\n",
+    "\n",
+    "In order to erase the current firmware, the command would be just like:\n",
+    "\n",
+    "`esptool.py --port /dev/ttyUSB0 erase_flash`\n",
+    "\n",
+    "And to flash it one of the following:\n",
+    "\n",
+    "* `esptool.py --port /dev/ttyUSB0 --baud 460800 write_flash --flash_size=detect 0 esp8266-20170108-v1.8.7.bin`\n",
+    "* `esptool.py --port /dev/ttyUSB0 --baud 460800 write_flash --flash_size=detect -fm dio 0 esp8266-20170108-v1.8.7.bin`"
    ]
   },
   {
